--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,4 +36,10 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <ImageView
+        android:id="@+id/circleDrawable"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        />
+
 </android.support.constraint.ConstraintLayout>
